# stockpulse

./: .env.example  .gitignore  plan.md  progress.md  pyproject.toml
configs/: base.yaml
docker/: docker-compose.yaml
scripts/: run_ingestion.py
src/data/: database.py  models.py  stock_ingestor.py
src/utils/: config.py  logging.py
